--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <script src="https//d3js.org/d3.v4.min.js"></script>
         <script src="https//d3js.org/topojson.v1.min.js"></script>
         <script src="https://d3js.org/queue.v1.min.js"></script>
-        <script src="js/d3.js"></script>
+
         <script
-            src="http://code.jquery.com/jquery-3.3.1.min.js"
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
    
