--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.jquery.com/jquery-2.0.0.js"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
-        <script src="d3js.org/topojson.v1.min.js"></script>
-        <script src="d3js.org/queue.v1.min.js"></script>
+        <script src="https://d3js.org/topojson.v1.min.js"></script>
+        <script src="https://d3js.org/queue.v1.min.js"></script>
         <script src="js/d3.js"></script>
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
