--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <!--JavaScript at end of body for optimized loading-->
         <script type="text/javascript" src="js/materialize.js"></script>
         <script src="js/init.js"></script>
-        <script src="http://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         
     </body>
